--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,11 +11,23 @@ h2, h3 {
     color: #8fa193;
 }
 
+.contact-btn{
+    border: none;
+}
+
+.header-logo{
+    width: 130px;
+    border-radius: 10px;
+}
+
+
+
 /* Hero Section */
 .hero {
-    background-image: url('pintura-hogar.jpg');
+    background-image: url('../../public/img/hero.png');
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
     height: 80vh;
     color: white;
     text-align: center;
@@ -58,9 +70,54 @@ h2, h3 {
     background-color: #6f7e73;
 }
 
+.services-images{
+    margin-top: 30px;
+    width: 160px;
+}
+
 /* Galería */
 .galeria img {
     border-radius: 10px;
+}
+
+.container-galery-section{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-galery1{
+    display: flex;
+    flex-direction: row;
+    width: 958px;
+    gap: 15px;
+    margin-top: 15px;
+}
+
+.galery-vertical{
+    width: 100%;
+
+    &:hover{
+        transform: scale(1.02);
+        transition: all 0.3s ease-in-out;
+    }
+}
+
+.container-horizontal1{
+    display: flex;
+    flex-direction: column;
+    width: 87%;
+    gap: 15px;
+}
+
+.galery-horizontal{
+    width: 100%;
+    &:hover{
+        transform: scale(1.02);
+        transition: all 0.3s ease-in-out;
+    }
 }
 
 /* Footer */
