--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,11 @@
-/* Estilos generales */
+@import url(./normalize.scss);
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+*{
+    font-family: "Open Sans", sans-serif;
+}
+
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -79,12 +86,24 @@ header{
     background-color: #6f7e73;
 }
 
+//SERVICES
+
+.servicios{
+    scroll-margin-top: 120px;
+}
+
 .services-images{
     margin-top: 30px;
     width: 160px;
+    
 }
 
 /* Galería */
+.galeria{
+    scroll-margin-top: 120px;
+}
+
+
 .galeria img {
     border-radius: 10px;
 }
@@ -129,10 +148,205 @@ header{
     }
 }
 
+
+//CONTACTO
+
+.contacto{
+    scroll-margin-top: 120px;
+    margin-top: 4vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    p{
+        font-size: large;
+        font-weight: 500;
+    }
+}
+
+.container-form {
+    margin-top: 4vh;
+    background-color: #fff;
+    padding: 40px;
+    max-width: 500px;
+    width: 100%;
+    border-radius: 12px;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+
+
+.form-group {
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #666;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 15px;
+    border-radius: 8px;
+    border: 1px solid #ddd;
+    background-color: #f9f9f9;
+    font-size: 16px;
+    transition: border-color 0.3s ease;
+}
+
+input:focus, textarea:focus {
+    border-color: #8fa193;
+    background-color: #fff;
+    outline: none;
+}
+
+textarea {
+    resize: vertical;
+    height: 150px;
+}
+
+.button-form {
+    width: 100%;
+    padding: 15px;
+    background-color: #8fa193;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+button:hover {
+    background-color: #97b69e;
+    transform: translateY(-2px);
+}
+
+button:active {
+    background-color: #1e7e34;
+    transform: translateY(0);
+}
+
+#response-message {
+    margin-top: 15px;
+    font-size: 16px;
+    color: #000000;
+}
+
+
 /* Footer */
 footer {
     background-color: #333;
     color: white;
     padding: 20px;
     text-align: center;
+}
+
+.wpp{
+    z-index: 1;
+    position: fixed;
+    left: 93%;
+    top: 83%;
+    a{
+        img{
+            z-index: 20;
+            width: 90px;
+            transition: scale 0.4s ease;
+
+            &:hover{
+                scale: 1.105;
+            }
+            
+        }
+    }
+}
+
+@media(max-width:985px){
+    .container-galery1{
+        width: 700px; 
+    }
+
+    .galery-vertical{
+        width: 100%;
+    }
+    
+    .container-horizontal1{
+        width: 118%;
+    }
+}
+
+@media(max-width:730px){
+
+    .container-galery1{
+        width: 500px; 
+    }
+
+    .container-horizontal1{
+        width: 163%;
+    }
+
+    .wpp{
+        left: 87%;
+    }
+
+    .header-logo{
+        width: 100px;
+    }
+
+    .tittle-service-2{
+        margin-top: 50px;
+    }
+}
+
+@media(max-width:523px){
+
+    .wpp{
+        left: 80%;
+    }
+
+    .container-galery1{
+        display: flex;
+        flex-direction: column;
+        width: 350px;
+    }
+
+    .galery-vertical{
+        width: 100%;
+    }
+    
+    .container-horizontal1{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    .galery-horizontal{
+        width: 100%;
+        &:hover{
+            transform: scale(1.02);
+            transition: all 0.3s ease-in-out;
+        }
+    }
+}
+
+
+@media(max-width:375px){
+
+    .hero-content h2 {
+        font-size: 40px;
+    }
+    
+
+    .container-galery1{
+        display: flex;
+        flex-direction: column;
+        width: 270px;
+    }
 }
