--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,7 +7,6 @@
 
 
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -43,7 +42,6 @@ header{
     background-image: url('../../public/img/hero.png');
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
     height: 80vh;
     color: white;
     text-align: center;
@@ -283,7 +281,6 @@ footer {
 }
 
 @media(max-width:730px){
-
     .container-galery1{
         width: 500px; 
     }
@@ -306,6 +303,20 @@ footer {
 }
 
 @media(max-width:523px){
+
+    .header-logo{
+        width: 80px;
+    }
+
+    
+    .hero {
+        height: 70vh;
+    }
+
+    .hero-content h2 {
+        font-size: 2.1rem;
+    }
+
 
     .wpp{
         left: 80%;
